<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/programTitle"
        android:layout_width="253dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtTitle"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/txtTitle" />

    <EditText
        android:id="@+id/mealCost"
        android:layout_width="221dp"
        android:layout_height="54dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/calculatorPrompt"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/programTitle" />

    <ImageView
        android:id="@+id/calculatorPicture"
        android:layout_width="360dp"
        android:layout_height="236dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealCost"
        app:srcCompat="@drawable/restaurantcalculator" />

    <Spinner
        android:id="@+id/percentTipSpinner"
        android:layout_width="157dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:entries="@array/precentTip"
        android:prompt="@string/spinnerPrompt"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@+id/calculatorPicture"
        tools:layout_editor_absoluteX="40dp" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCalculateButton"
        android:textColorHighlight="#E40B0B"
        android:textColorHint="#ED0808"
        android:textColorLink="#EC0B0B"
        app:backgroundTint="#2196F3"
        app:layout_constraintEnd_toEndOf="@+id/calculatorPicture"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/percentTipSpinner"
        app:layout_constraintTop_toTopOf="@+id/percentTipSpinner" />

    <TextView
        android:id="@+id/totalAmountOwed"
        android:layout_width="300dp"
        android:layout_height="132dp"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/totalCostAmount"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentTipSpinner" />
</androidx.constraintlayout.widget.ConstraintLayout>